scripts/nullaway/original/urlfcb11f5f67_Orchaldir_FantasyWorldSimulation_tgz-pJ8-fws_worldeditor_WorldEditorJ8.txt
../original/urlfcb11f5f67_Orchaldir_FantasyWorldSimulation_tgz-pJ8-fws_worldeditor_WorldEditorJ8/src/fws/utility/map/SquareMap.java:43: error: [NullAway] returning @Nullable expression from method with @NonNull return type
			return null;
			^
    (see http://t.uber.com/nullaway )
../original/urlfcb11f5f67_Orchaldir_FantasyWorldSimulation_tgz-pJ8-fws_worldeditor_WorldEditorJ8/src/fws/utility/map/SquareMap.java:63: error: [NullAway] returning @Nullable expression from method with @NonNull return type
			return null;
			^
    (see http://t.uber.com/nullaway )
../original/urlfcb11f5f67_Orchaldir_FantasyWorldSimulation_tgz-pJ8-fws_worldeditor_WorldEditorJ8/src/fws/utility/map/Map.java:56: error: [NullAway] returning @Nullable expression from method with @NonNull return type
			return null;
			^
    (see http://t.uber.com/nullaway )
../original/urlfcb11f5f67_Orchaldir_FantasyWorldSimulation_tgz-pJ8-fws_worldeditor_WorldEditorJ8/src/fws/utility/map/HexMap.java:51: error: [NullAway] returning @Nullable expression from method with @NonNull return type
			return null;
			^
    (see http://t.uber.com/nullaway )
../original/urlfcb11f5f67_Orchaldir_FantasyWorldSimulation_tgz-pJ8-fws_worldeditor_WorldEditorJ8/src/fws/utility/map/HexMap.java:53: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return null;
		^
    (see http://t.uber.com/nullaway )
../original/urlfcb11f5f67_Orchaldir_FantasyWorldSimulation_tgz-pJ8-fws_worldeditor_WorldEditorJ8/src/fws/utility/map/HexMap.java:67: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return null;
		^
    (see http://t.uber.com/nullaway )
../original/urlfcb11f5f67_Orchaldir_FantasyWorldSimulation_tgz-pJ8-fws_worldeditor_WorldEditorJ8/src/fws/utility/state/StateMgr.java:9: error: [NullAway] @NonNull field active_state_ not initialized
	private State active_state_;
	              ^
    (see http://t.uber.com/nullaway )
../original/urlfcb11f5f67_Orchaldir_FantasyWorldSimulation_tgz-pJ8-fws_worldeditor_WorldEditorJ8/src/fws/utility/state/StateMgr.java:25: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return states_.get(name);
		^
    (see http://t.uber.com/nullaway )
../original/urlfcb11f5f67_Orchaldir_FantasyWorldSimulation_tgz-pJ8-fws_worldeditor_WorldEditorJ8/src/fws/utility/state/State.java:5: error: [NullAway] @NonNull field manager_ not initialized
	protected StateMgr manager_;
	                   ^
    (see http://t.uber.com/nullaway )
../original/urlfcb11f5f67_Orchaldir_FantasyWorldSimulation_tgz-pJ8-fws_worldeditor_WorldEditorJ8/src/fws/world/WorldGenerationMap.java:16: error: [NullAway] initializer method does not guarantee @NonNull fields map_ (line 8), elevation_algo_ (line 10), rainfall_algo_ (line 11), temperature_algo_ (line 12) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public WorldGenerationMap(MapType type, int width, int height)
	       ^
    (see http://t.uber.com/nullaway )
../original/urlfcb11f5f67_Orchaldir_FantasyWorldSimulation_tgz-pJ8-fws_worldeditor_WorldEditorJ8/src/fws/world/generation/RainShadowAlgorithm.java:22: error: [NullAway] initializer method does not guarantee @NonNull field rainfall_ (line 15) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public RainShadowAlgorithm(WorldGenerationMap map, float threshold, int distance, int recharge_distance_)
	       ^
    (see http://t.uber.com/nullaway )
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
11 errors
